Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -44,3 +44,92 @@
 ### <SQL 명령어 작성법>
 - SQL 명령어를 보기 좋게 작성하기 위해서는 SPACE 및 TAB 키보드를 잘 활용해야 함
 <img width="742" height="484" alt="image" src="https://github.com/user-attachments/assets/180cf115-7f04-4c4e-8502-35e5d72811b2" />
+
+</br>
+</br>
+
+</br>
+</br>
+
+### 1. FROM
+- 데이터를 가져올 테이블 지정
+```sql
+SELECT 컬럼명 FROM 테이블명;
+```
+```sql
+SELECT * FROM CUSTOMER;   // CUSTOMER 테이블 전체 조회
+```
+</br>
+
+### 2. WHERE
+- 특정 조건으로 행(Row) 필터링
+```sql
+SELECT 컬럼명 FROM 테이블명 WHERE 조건;
+```
+```sql
+SELECT * FROM CUSTOMER WHERE GENDER = 'MAN';  // 성별이 남성만 조회
+```
+</br>
+
+### 3. GROUP BY
+- 같은 값을 가진 행들을 묶어 그룹화 (집계함수와 함께 사용)
+```sql
+SELECT 그룹컬럼, 집계함수(컬럼) FROM 테이블명 GROUP BY 그룹컬럼;
+```
+```sql
+SELECT ADDR, COUNT(MEM_NO) AS 회원수
+  FROM CUSTOMER
+ GROUP BY ADDR;    // 지역별 회원 수 집계
+```
+</br>
+
+### 4. COUNT (집계 함수)
+- 행(Row)의 개수를 계산
+```sql
+COUNT(컬럼명)
+```
+```sql
+SELECT COUNT(*) FROM CUSTOMER;                             // 전체 회원 수
+SELECT ADDR, COUNT(MEM_NO) FROM CUSTOMER GROUP BY ADDR;    // 지역별 회원 수
+```
+</br>
+
+### 5. HAVING
+- 그룹화된 결과에 조건 적용 (집계 결과 필터링)
+```sql
+SELECT 그룹컬럼, 집계함수(컬럼)
+  FROM 테이블명
+ GROUP BY 그룹컬럼
+HAVING 집계조건;
+```
+```sql
+SELECT ADDR, COUNT(*) AS 회원수
+  FROM CUSTOMER
+ GROUP BY ADDR
+HAVING COUNT(*) < 100;    // 회원수가 100 미만인 지역만
+```
+</br>
+
+### 6. ORDER BY
+- 조회 결과 정렬 (ASC: 오름차순, DESC: 내림차순)
+- ASC → 오름차순 (기본값, 작은 값 → 큰 값)
+- DESC → 내림차순 (큰 값 → 작은 값)
+```sql
+SELECT 컬럼명 FROM 테이블명 ORDER BY 컬럼명 ASC|DESC;
+```
+```sql
+SELECT NAME, AGE FROM CUSTOMER ORDER BY AGE ASC;   // 나이 오름차순
+SELECT NAME, AGE FROM CUSTOMER ORDER BY AGE DESC;  // 나이 내림차순
+```
+</br>
+
+### 7. IN (특수 연산자)
+- 특정 값이 리스트 안에 있는지 확인
+```sql
+컬럼명 IN (값1, 값2, 값3)
+```
+```sql
+SELECT * FROM CUSTOMER WHERE ADDR IN ('SEOUL','INCHEON');  
+```
+</br>
+
