Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -17,7 +17,7 @@
 </br>
 </br>
 
-### <FROM -> WHRE -> GROUP BY -> HAVING -> SELECT -> ORDER BY>
+### <FROM -> WHERE -> GROUP BY -> HAVING -> SELECT -> ORDER BY>
 - FROM -> WHERE -> GROUP BY 순으로 실행
 - FROM -> GROUP BY 순으로도 작성 가능
 - FROM: 테이블 확인
