Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -73,6 +73,7 @@ SELECT * FROM CUSTOMER WHERE GENDER = 'MAN';  // 성별이 남성만 조회
 
 ### 3. GROUP BY
 - 같은 값을 가진 행들을 묶어 그룹화 (집계함수와 함께 사용)
+- GROUP BY 뒤에 작성된 열은 SELECT 뒤에도 작성
 ```sql
 SELECT 그룹컬럼, 집계함수(컬럼) FROM 테이블명 GROUP BY 그룹컬럼;
 ```
