Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -78,9 +78,12 @@ SELECT * FROM CUSTOMER WHERE GENDER = 'MAN';  // 성별이 남성만 조회
 SELECT 그룹컬럼, 집계함수(컬럼) FROM 테이블명 GROUP BY 그룹컬럼;
 ```
 ```sql
-SELECT ADDR, COUNT(MEM_NO) AS 회원수
-  FROM CUSTOMER
- GROUP BY ADDR;    // 지역별 회원 수 집계
+SELECT  ADDR
+		,COUNT(MEM_NO) AS 회원수
+  FROM  CUSTOMER
+ WHERE  GENDER = 'MAN'
+ GROUP
+    BY  ADDR;    // 지역별 회원 수 집계
 ```
 </br>
 
@@ -104,10 +107,13 @@ SELECT 그룹컬럼, 집계함수(컬럼)
 HAVING 집계조건;
 ```
 ```sql
-SELECT ADDR, COUNT(*) AS 회원수
-  FROM CUSTOMER
- GROUP BY ADDR
-HAVING COUNT(*) < 100;    // 회원수가 100 미만인 지역만
+SELECT  ADDR
+		,COUNT(MEM_NO) AS 회원수
+  FROM  CUSTOMER
+ WHERE  GENDER = 'MAN'
+ GROUP
+    BY  ADDR
+HAVING  COUNT(MEM_NO) < 100;    // 회원수가 100 미만인 지역만
 ```
 </br>
 
