Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -136,7 +136,7 @@ SELECT NAME, AGE FROM CUSTOMER ORDER BY AGE DESC;  // 나이 내림차순
 컬럼명 IN (값1, 값2, 값3)
 ```
 ```sql
-SELECT * FROM CUSTOMER WHERE ADDR IN ('SEOUL','INCHEON');
+SELECT * FROM CUSTOMER WHERE ADDR IN ('SEOUL','INCHEON');		// 거주지역을 서울, 인천 조건으로 필터링
 
 SELECT  ADDR
 		,GENDER
