Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -269,5 +269,45 @@ HAVING  COUNT(MEM_NO) < 100
 
 ---
 
-### SQL 명령어 (3/6) : 데이터 조작어(DML) 
+### SQL 문법 (2/4) : 테이블 결합(JOIN)
 </br>
+
+### 테이블결합(JOIN)
+- 관계는 1:1, 1:N, N:N 세가지 형태로, 테이블 간의 연결이 가능하다는 것을 의미
+- 테이블결합(JOIN)은 두 테이블 관계를 활용하여, 테이블을 결합하는 명령어
+<img width="959" height="224" alt="image" src="https://github.com/user-attachments/assets/bcd847be-9b1b-482f-abb7-bc894c97188d" />
+</br>
+</br>
+</br>
+
+### ERM(Entity-Relationship Modelling)
+- ERM(Entity-Relationship Modelling)은 개체-관계 모델링이며, 관계형 데이터베이스에 테이블을 모델링할 때 사용
+- 개체(Entity): 하나 이상의 속성(Attribute)으로 구성된 개체 
+- 관계(Relationship): 속성(Entity)들 간의 관계
+<img width="940" height="353" alt="image" src="https://github.com/user-attachments/assets/06271e0c-1b6f-472f-9fcd-a12cc58f14b7" />
+</br>
+</br>
+</br>
+
+### ERD(Entity-Relationship Diagram)
+- ERD(Entity-Relationship Diagram)은 개체 간의 관계를 도표로 표현할 때 사용
+- FK(FOREIGN KEY) : 다른 테이블에서 PK(PRIMARY KEY) (Ex. 주문테이블의 회원번호는 회원테이블의 PK)
+<img width="866" height="343" alt="image" src="https://github.com/user-attachments/assets/06a2abd4-f9cc-44de-9e1d-b2cd87f08fb8" />
+</br>
+</br>
+</br>
+
+### INNER, LEFT, RIGHT JOIN
+- Inner Join: 두 테이블의 공통 값이 매칭되는 데이터만 결합
+- left Join: 두 테이블의 공통 값이 매칭되는 데이터만 결합 + 왼쪽 테이블의 매칭되지 않는 데이터는 NULL
+- Right Join: 두 테이블의 공통 값이 매칭되는 데이터만 결합+ 오른쪽 테이블의 매칭되지 않는 데이터는 NULL
+<img width="940" height="347" alt="image" src="https://github.com/user-attachments/assets/a1e10349-bfc0-4d64-9d1e-5a7ad087bddc" />
+</br>
+</br>
+</br>
+
+### 테이블결합(JOIN) + 데이터조회(SELECT)
+- 테이블 결합(JOIN) 및 데이터 조회(SELECT)를 활용하여, 여러 테이블들을 결합하여 조회 및 분석
+- 테이블 결합(JOIN)은 3가지 이상 테이블 결합이 가능
+<img width="940" height="399" alt="image" src="https://github.com/user-attachments/assets/0dd92d91-b5ab-4db1-b8dd-f5cc81817df1" />
+
