Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -310,4 +310,11 @@ HAVING  COUNT(MEM_NO) < 100
 - 테이블 결합(JOIN) 및 데이터 조회(SELECT)를 활용하여, 여러 테이블들을 결합하여 조회 및 분석
 - 테이블 결합(JOIN)은 3가지 이상 테이블 결합이 가능
 <img width="940" height="399" alt="image" src="https://github.com/user-attachments/assets/0dd92d91-b5ab-4db1-b8dd-f5cc81817df1" />
+</br>
+</br>
 
+</br>
+</br>
+
+### 1. INNER JOIN
+- 두 테이블의 공통 값이 매칭되는 데이터만 결합
