Update 3. SQL 문법.md

--- a/SQL/3. SQL 문법.md
+++ b/SQL/3. SQL 문법.md
@@ -369,7 +369,37 @@ SELECT  *
     ON  A.MEM_NO = B.MEM_NO
  WHERE  A.MEM_NO IS NULL;
 ```
+</br>
 
+### 4. TEMPORARY TABLE 생성
+- SELECT 결과를 임시 테이블로 저장. DB 연결이 끊기면 자동 삭제됨.
+```sql
+CREATE TEMPORARY TABLE 테이블명
+SELECT ...;
+```
+```sql
+CREATE TEMPORARY TABLE CUSTOMER_SALES_INNER_JOIN
+SELECT  A.*
+		,B.ORDER_NO
+  FROM  CUSTOMER AS A
+ INNER
+  JOIN  SALES AS B
+    ON  A.MEM_NO = B.MEM_NO;
+```
+</br>
+
+### 5. 3개 이상 테이블 JOIN
+- 여러 테이블을 연속으로 JOIN 가능
+```sql
+SELECT  *
+  FROM  SALES AS A
+  LEFT
+  JOIN  CUSTOMER AS B
+    ON  A.MEM_NO = B.MEM_NO
+  LEFT
+  JOIN  PRODUCT AS C
+    ON  A.PRODUCT_CODE = C.PRODUCT_CODE;
+```
 </br>
 </br>
 
