Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -340,137 +340,6 @@ SELECT  *
 
 ---
 
-### SQL 명령어 (4/6) : 데이터 제어어(DCL)
-</br>
-
-### <데이터 제어어(DCL, Data Control Language)>
-- 데이터 접근 권한 부여 및 제거할 때 사용하는 명령어
-- 데이터베이스 관리자(DBA)가 특정 사용자(User)에게 데이터 접근 권한을 부여 및 제거할 때 사용하는 명령어
-<img width="940" height="279" alt="image" src="https://github.com/user-attachments/assets/c225c29a-e50b-4460-ad7d-df1c7b4ec49e" />
-</br>
-</br>
-
-### 1. SELECT (사용자 확인)
-- 현재 등록된 사용자 목록 확인
-```sql
-SELECT * FROM  USER;
-```
-```sql
-SELECT user, host FROM USER;   // 계정명과 호스트만 확인
-```
-
-### 2. CREATE USER
-- 새로운 사용자(계정) 생성
-```sql
-CREATE USER '계정명'@'호스트' IDENTIFIED BY '비밀번호';
-```
-```sql
-CREATE USER 'TEST'@'localhost' IDENTIFIED BY 'TEST';     // 로컬에서만 접속 가능한 TEST 계정
-CREATE USER 'kim'@'%' IDENTIFIED BY 'Abc123!';           // 모든 호스트에서 접속 가능한 kim 계정
-```
-</br>
-
-### 3. SET PASSWORD / ALTER USER
-- 기존 사용자의 비밀번호 변경
-```sql
-SET PASSWORD FOR '계정명'@'호스트' = '새비밀번호';				// 구버전 방식
-
-ALTER USER '계정명'@'호스트' IDENTIFIED BY '새비밀번호';			// 권장 방식
-```
-```sql
-SET PASSWORD FOR 'TEST'@'localhost' = '1234';  					// 구버전 방식
-
-ALTER USER 'kim'@'%' IDENTIFIED BY 'NewPass!';  				// 권장 방식
-```
-</br>
-
-### 4. DROP USER
-- 사용자 계정 삭제
-```sql
-DROP USER '계정명'@'호스트';
-```
-```sql
-DROP USER 'TEST'@'localhost';   	// TEST 계정 삭제
-```
-</br>
-
-### 5. GRANT (권한 부여)
-- 사용자에게 권한 부여
-```sql
-GRANT 권한목록 ON 데이터베이스.테이블 TO '계정명'@'호스트';
-GRANT ALL ON 데이터베이스.테이블 TO '계정명'@'호스트';
-```
-```sql
-GRANT SELECT, DELETE ON Practice.회원테이블 TO 'TEST'@'localhost';   		// 조회, 삭제만 허용
-GRANT ALL ON Practice.회원테이블 TO 'TEST'@'localhost';              		// 모든 권한 허용
-```
-</br>
-
-### 6. REVOKE (권한 제거)
-- 사용자에게 부여된 권한 제거
-```sql
-REVOKE 권한목록 ON 데이터베이스.테이블 FROM '계정명'@'호스트';
-REVOKE ALL ON 데이터베이스.테이블 FROM '계정명'@'호스트';
-```
-```sql
-REVOKE DELETE ON Practice.회원테이블 FROM 'TEST'@'localhost';   		// DELETE 권한만 제거
-REVOKE ALL ON Practice.회원테이블 FROM 'TEST'@'localhost';      		// 모든 권한 제거
-```
-</br>
-</br>
-
-### - 예제
-```sql
-/***************사용자 확인***************/
-/* MYSQL 데이터베이스 사용 */
-USE MYSQL;
-
-/* 사용자 확인 */
-SELECT  *
-  FROM  USER;
-  
-/***************사용자 추가***************/
-
-/* 사용자 아이디 및 비밀번호 생성 */
-CREATE USER 'TEST'@LOCALHOST IDENTIFIED BY 'TEST';
-
-/* 사용자 확인 */
-SELECT  *
-  FROM  USER;
-  
-/* 사용자 비밀번호 변경 */
-SET PASSWORD FOR 'TEST'@LOCALHOST = '1234';
-
-  
-/***************권한 부여 및 제거***************/ 
-/** 권한: CREATE, ALTER, DROP, INSERT, DELETE, UPDATE, SELECT 등  **/
-
-/* 특정 권한 부여 */
-GRANT SELECT, DELETE ON PRACTICE.회원테이블 TO 'TEST'@LOCALHOST;
-
-/* 특정 권한 제거 */
-REVOKE DELETE ON PRACTICE.회원테이블 FROM 'TEST'@LOCALHOST;
-
-/* 모든 권한 부여 */
-GRANT ALL ON Practice.회원테이블 TO 'TEST'@LOCALHOST;
-
-/* 모든 권한 제거 */
-REVOKE ALL ON Practice.회원테이블 FROM 'TEST'@LOCALHOST;
-
-
-/***************사용자 삭제***************/ 
-
-/* 사용자 삭제 */
-DROP USER 'TEST'@LOCALHOST;
-
-/* 사용자 확인 */
-SELECT  *
-  FROM  USER;
-```
-</br>
-
----
-
 ### SQL 명령어 (5/6) : 트랜젝션 제어어(TCL)
 </br>
 
@@ -691,13 +560,6 @@ SELECT  *  FROM  회원테이블;
 </br>
 </br>
 
-### < 데이터 제어어, 트랜젝션 제어어 >
-- 데이터 제어어(DCL)
-<img width="610" height="468" alt="image" src="https://github.com/user-attachments/assets/1305222e-31bf-48b9-880f-e229a76fe0d1" />
-</br>
-</br>
-</br>
-</br>
-
+### < 트랜젝션 제어어 >
 - 트렌젝션 제어어(TCL)
 <img width="673" height="361" alt="image" src="https://github.com/user-attachments/assets/c4093e81-bbe7-4262-9358-c1e5c742229c" />
