Update 2. SQL 명령어.md

--- a/SQL/2. SQL 명령어.md
+++ b/SQL/2. SQL 명령어.md
@@ -527,7 +527,7 @@ SELECT  *  FROM  회원테이블;
 
 ---
 
-### SQL 명령어 (5/6) : 트랜젝션 제어어(TCL)
+### SQL 명령어 (6/6) : SQL 명령어 단원 정리 
 </br>
 
 ### < SQL 기본명령어, 테이블 >
