Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -1,6 +1,9 @@
 # 실전을 위한 SQL 무료 강의
 ### 실전을 위한 SQL 무료 강의 (1/18) : Select From
-
+```sql
+SELECT 출력하고 싶은 결과
+FROM   테이블 이름
+```
 
 ### 실전을 위한 SQL 무료 강의 (2/18) : Select * From
 
