Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -8,6 +8,11 @@ FROM   테이블 이름
 </br>
 
 ### 실전을 위한 SQL 무료 강의 (2/18) : Select * From
+- 해당 테이블에 들어 있는 모든 열과 모든 행을 출력
+```sql
+SELECT *
+FROM   테이블 이름
+```
 
 
 ### 실전을 위한 SQL 무료 강의 (3/18) : Where (1)
