Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -8,14 +8,20 @@ FROM   테이블 이름
 </br>
 
 ### 실전을 위한 SQL 무료 강의 (2/18) : Select * From
-- 해당 테이블에 들어 있는 모든 열과 모든 행을 출력
+- 해당 테이블의 모든 열을 출력
 ```sql
 SELECT *
 FROM   테이블 이름
 ```
-
+</br>
 
 ### 실전을 위한 SQL 무료 강의 (3/18) : Where (1)
+- 조건에 맞는 행만 조회
+```sql
+SELECT 출력하고 싶은 결과
+FROM   테이블 이름
+WHERE  조건문
+```
 
 
 ### 실전을 위한 SQL 무료 강의 (4/18) : Where (2)
