Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -22,6 +22,13 @@ SELECT 출력하고 싶은 결과
 FROM   테이블 이름
 WHERE  조건문
 ```
-
+- 두 개 이상의 조건을 써야할 때는 AND로 연결
+```sql
+WHERE 나라 = '멕시코' AND 나이 = 30
+```
+- 여러 조건 중에 한 조건만 만족해도 될 때는 OR로 연결
+```sql
+WHERE 나라 = '멕시코' OR 나이 = 30
+```
 
 ### 실전을 위한 SQL 무료 강의 (4/18) : Where (2)
