Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -37,5 +37,18 @@ WHERE 나라 = '멕시코' OR 나이 = 30
 WHERE 나라 != '멕시코'
 WHERE 나라 <> '멕시코'
 ```
+- 크다는 >, 작다는 <, 크거나 같다는 >=, 작거나 같다는 <=
+```sql
+WHERE 나이 >= 30 AND 나이 < 40
+```
+- 문자는 '', 정수는 그냥!
+```sql
+WHERE 나라 = '멕시코' OR 나이 = 30
+```
+- 같은 열을 이용한 여러 조건은 in / NOT in 과 리스트를 이용
+```sql
+WHERE 나라 in ('멕시코', '미국', '한국', '영국', '일본')
+WHERE 나라 NOT in ('멕시코', '미국', '한국', '영국', '일본')
+```
 
 ### 실전을 위한 SQL 무료 강의 (4/18) : Where (2)
