Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -76,3 +76,19 @@ WHERE 나라 in ('멕시코', '미국', '한국', '영국', '일본')
 WHERE 나라 NOT in ('멕시코', '미국', '한국', '영국', '일본')
 ```
 </br>
+
+---
+
+### 실전을 위한 SQL 무료 강의 (5/18) : Between, Like
+</br>
+
+- 범위를 나타낼 때는 BETWEEN을 사용하면 유용
+```sql
+WHERE 나이 BETWEEN 30 AND 39    // WHERE 나이 >= 30 AND 나이 <= 39 (나이가 30대인 사람만 출력)
+```
+</br>
+
+- 제외하고 싶은 범위는 NOT BETWEEN을 사용
+```sql
+WHERE 나이 NOT BETWEEN 30 AND 39    // WHERE 나이 < 30  OR 나이 >= 40 (나이가 30대인 사람만 제외하고 출력)
+```
