Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -95,4 +95,6 @@ WHERE 나이 NOT BETWEEN 30 AND 39    // WHERE 나이 < 30  OR 나이 >= 40 (나
 ```
 </br>
 
-
+### Where 사용법 (Like with %)
+- 일정 패턴을 찾을 때는 Like/NOT LIKE 연산자가 유용
+```sql
