--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -98,3 +98,7 @@ WHERE 나이 NOT BETWEEN 30 AND 39    // WHERE 나이 < 30  OR 나이 >= 40 (나
 ### Where 사용법 (Like with %)
 - 일정 패턴을 찾을 때는 Like/NOT LIKE 연산자가 유용
 ```sql
+WHERE 이름 LIKE 'Tom%'        // 이름이 Tom으로 시작하는 사람을 출력하고 싶다면
+WHERE 이름 NOT LIKE '%y'      // 이름이 y로 끝나지 않는 사람을 출력하고 싶다면
+WHERE 이름 LIKE '%or%'        // 이름에 or이 어디든 들어있는 사람을 찾으려면 (처음이나 끝이어도 상관없음)
+```
