Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -109,25 +109,62 @@ WHERE 이름 LIKE '%or%'        // 이름에 or이 어디든 들어있는 사람
 ### 실전을 위한 SQL 무료 강의 (6/18) : Order By
 </br>
 
-- 조건에 맞는 결과를 특정 열 기준으로 정렬 (ASC=오름차순, DESC=내림차순)
+- 조건에 맞는 결과를 특정 열 기준으로 정렬
+- ASC: 오름차순, DESC: 내림차순 (생략시 ASC)
 ```sql
 SELECT   출력하고 싶은 결과
 FROM     테이블 이름
 WHERE    조건문
 ORDER BY 열 이름 ASC (DESC)
 ```
+</br>
 
+- 여러 개의 열 이름을 이용해 정렬하고 싶을 때는 콤마로 구분
+```sql
+ORDER BY 고객가입일 DESC, 고객이름 ASC
+```
 </br>
 
 ---
 
 ### 실전을 위한 SQL 무료 강의 (7/18) : Count
+</br>
 
+- 조건에 맞는 데이터 개수(행 수) 출력
+- 집계함수 중 하나
+- COUNT(*) 혹은 COUNT(열 이름)으로 사용
+- 뒤에 AS를 붙이고 이 열의 새로운 이름을 적음
+```sql
+SELECT  COUNT(*)
+FROM    테이블 이름
+WHERE   조건문
+```
+</br>
+
+- COUNT(DISTINCT 열이름)을 사용하면 unique한 행의 수를 셈
+- SELECT 결과에서 중복된 값을 제외하고 고유한 값만 반환
+```sql
+SELECT COUNT(customer_id) as total_customers,
+       COUNT(DISTINCT customer_id) as total_unique_customers
+FROM Customers
+```
 </br>
 
 ---
 
 ### 실전을 위한 SQL 무료 강의 (8/18) : SUM, AVG, MIN, MAX
+</br>
+
+- sql에서 쓰이는 집계함수 중 하나
+- SUM : 총 합계를 계산 (빈 행 제외)
+- AVG : 평균을 계산 (빈 행 제외)
+- MIN : 최소값을 계산
+- MAX : 최대값을 계산
+```sql
+SELECT  SUM(열이름)
+FROM    테이블 이름
+WHERE   조건문
+```
 
 </br>
 
