Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -150,6 +150,8 @@ FROM Customers
 ```
 </br>
 
+
+
 ---
 
 ### 실전을 위한 SQL 무료 강의 (8/18) : SUM, AVG, MIN, MAX
@@ -165,6 +167,9 @@ SELECT  SUM(열이름)
 FROM    테이블 이름
 WHERE   조건문
 ```
+
+<img width="336" height="212" alt="image" src="https://github.com/user-attachments/assets/c911454f-c1b1-4631-bd74-40edf2d7df15" />
+
 
 </br>
 
