Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -167,10 +167,17 @@ SELECT  SUM(열이름)
 FROM    테이블 이름
 WHERE   조건문
 ```
+</br>
+</br>
+</br>
 
 <img width="336" height="212" alt="image" src="https://github.com/user-attachments/assets/c911454f-c1b1-4631-bd74-40edf2d7df15" />
-
-
+```
+SUM(Height) = 160 + 180 + 195 + 150 = 685
+AVG(Height) = 685 / 4 = 171.25
+COUNT(Height) = 4
+COUNT(*) = 5
+```
 </br>
 
 ---
