Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -172,7 +172,9 @@ WHERE   조건문
 </br>
 
 <img width="336" height="212" alt="image" src="https://github.com/user-attachments/assets/c911454f-c1b1-4631-bd74-40edf2d7df15" />
-```
+</br>
+
+```sql
 SUM(Height) = 160 + 180 + 195 + 150 = 685
 AVG(Height) = 685 / 4 = 171.25
 COUNT(Height) = 4
