Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -150,8 +150,6 @@ FROM Customers
 ```
 </br>
 
-
-
 ---
 
 ### 실전을 위한 SQL 무료 강의 (8/18) : SUM, AVG, MIN, MAX
@@ -186,7 +184,35 @@ COUNT(*) = 5
 ---
 
 ### 실전을 위한 SQL 무료 강의 (9/18) : Group By
+</br>
 
+- 열 이름 : 그룹핑 하고 싶은 열
+- SUM(열이름) : 계산하고 싶은 열 (숫자)
+- WHERE 다음에 씀. (ORDER BY 전에 씀)
+```sql
+SELECT   열 이름, SUM(열이름)
+FROM     테이블 이름
+WHERE    조건문
+GROUP BY 열 이름
+```
+</br>
+
+- 대부분의 경우에는 SELECT 뒤에 나오는 열과 GROUP BY 뒤에 나오는 열이 같지만, 아닐수도 있다. SELECT 뒤의 열 이름은 반드시 GROUP BY 뒤에 쓴 열 이름 중 하나를 써야 함.
+- SELECT 뒤에 나오는 열이름(GROUP BY 뒤의 열 이름 중이어야 함) 외에는 집계함수를 사용
+- GROUP BY는 그룹별 갯수, 합계, 평균, 최소값, 최대값 등등을 구하기 위함임
+```sql
+SELECT   Country, City, SUM(Sales)
+FROM     Customers
+GROUP BY Country, City                     // 가능
+
+SELECT   Country, SUM(Sales)
+FROM     Customers
+GROUP BY Country, City                     // 가능
+
+SELECT   Country, City, SUM(Sales)
+FROM     Customers
+GROUP BY Country                           // 불가능
+```
 </br>
 
 ---
