Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -201,17 +201,17 @@ GROUP BY 열 이름
 - SELECT 뒤에 나오는 열이름(GROUP BY 뒤의 열 이름 중이어야 함) 외에는 집계함수를 사용
 - GROUP BY는 그룹별 갯수, 합계, 평균, 최소값, 최대값 등등을 구하기 위함임
 ```sql
-SELECT   Country, City, SUM(Sales)
+SELECT   Country, City, SUM(Sales)         // 가능
 FROM     Customers
-GROUP BY Country, City                     // 가능
+GROUP BY Country, City                     
 
-SELECT   Country, SUM(Sales)
+SELECT   Country, SUM(Sales)               // 가능
 FROM     Customers
-GROUP BY Country, City                     // 가능
+GROUP BY Country, City                           
 
-SELECT   Country, City, SUM(Sales)
+SELECT   Country, City, SUM(Sales)         // 불가능
 FROM     Customers
-GROUP BY Country                           // 불가능
+GROUP BY Country                          
 ```
 </br>
 
