Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -218,14 +218,37 @@ GROUP BY Country
 ---
 
 ### 실전을 위한 SQL 무료 강의 (10/18) : Having
+</br>
 
+- GROUP BY로 묶은 집계 결과에 대한 조건
+- GROUP BY 다음에 씀 (ORDER BY 전에 씀)
+- WHERE : GROUP BY 전에 필터링 하는 것, HAVING : GROUP BY 결과를 필터링 하는 것
+```sql
+SELECT   열 이름, SUM(열이름)
+FROM     테이블 이름
+WHERE    조건문
+GROUP BY 열 이름
+HAVING   조건문 (집계결과에 대해)
+```
 </br>
 
 ---
 
 ### 실전을 위한 SQL 무료 강의 (11/18) : As
+</br> 
 
+- 열이나 테이블에 별칭 붙이기 (테이블은 JOIN 사용할 때 흔하게 쓰임)
+```sql
+SELECT  열 이름 AS 새로운 이름
+FROM    테이블 이름
+```
+</br>
 
+- As는 생략 가능
+```sql
+SELECT  고객이름 이름, 고객주소 주소
+FROM    고객표
+```
 </br>
 
 ---
