Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -254,30 +254,126 @@ FROM    고객표
 ---
 
 ### 실전을 위한 SQL 무료 강의 (12/18) : CASE WHEN
+</br>
 
-
+- 기존의 열과 조건문을 이용해서 새로운 열을 만들고 싶을 때 사용
+- 조건문은 순차적으로 진행. 첫번째 조건을 만족하면 다음 조건들을 확인하지 않고 바로 첫번째 이름 부여.
+- 마지막 ELSE는 생략 가능 (END는 생략하지 않음)
+```sql
+CASE
+       WHEN 조건1 THEN '이름1'
+       WHEN 조건2 THEN '이름2'
+       WHEN 조건3 THEN '이름3'
+       ELSE '이름4' END
+       AS 새로운열이름
+```
+```sql
+SELECT 
+       이름,
+       점수,
+       CASE
+            WHEN 점수 >= 90 THEN 'A등급'
+            WHEN 점수 >= 80 THEN 'B등급'
+            WHEN 점수 >= 70 THEN 'C등급'
+            WHEN 점수 >= 60 THEN 'D등급'
+            ELSE 'F등급'
+       END AS 성적등급
+FROM 학생테이블;
+```
 </br>
 
 ---
 
 ### 실전을 위한 SQL 무료 강의 (13/18) : Inner Join
+</br>
 
+- INNER JOIN은 테이블1과 테이블2 공통으로 있는 행만 출력
+- INNER를 생략하고 JOIN 이라고만 써도 됨
+```sql
+SELECT      테이블1.열이름, 테이블2.열이름
+FROM        테이블 1
+INNER JOIN  테이블 2
+ON          테이블1.열이름 = 테이블2.열이름
+```
+</br>
+
+- 테이블이 여러 개 나오므로 AS를 이용
+```sql
+SELECT      표1.고객이름, 표2.세일
+FROM        고객표 AS 표1
+INNER JOIN  주문내역 AS 표2
+ON          표1.고객번호 = 표2.고객번호
+```
+</br>
+
+- SELECT 뒤에 열 이름을 사용할 때 같은 열 이름이 두 개 이상의 테이블에 있을 때는 테이블의 출처를 표시해야 함 (같은 열 이름이 없을 경우에는 생략 가능)
+```sql
+SELECT      고객이름, 세일
+FROM        고객표 AS 표1
+INNER JOIN  주문내역 AS 표2
+ON          표1.고객번호 = 표2.고객번호
+```
+</br>
+
+### INNER JOIN 규칙
+1. 두 테이블 모두에 있는 데이터만 출력
+2. 첫번째 테이블과 두번째 테이블 둘 다 있는 데이터라면 "중복"된 데이터가 있는 열도 다 그대로 출력
 
 </br>
 
 ---
 
 ### 실전을 위한 SQL 무료 강의 (14/18) : Left Join
+</br>
 
+- LEFT JOIN은 테이블1에 있는 모든 행을 출력
+- ON 조건이 맞지 않는 경우 오른쪽 테이블의 값은 NULL로 출력됨
+```sql
+SELECT     테이블1.열이름, 테이블2.열이름
+FROM       테이블 1
+LEFT JOIN  테이블 2
+ON         테이블1.열이름 = 테이블2.열이름
+```
+</br>
+
+### LEFT JOIN 규칙
+1. 왼쪽 테이블에 있는 데이터만 출력 (LEFT JOIN 전에 쓰는 테이블, 즉 FROM 뒤에 쓰는 테이블)
+2. 왼쪽 테이블에 있는 데이터라면 "중복"된 데이터가 있는 열도 다 그대로 출력
+3. LEFT JOIN은 LEFT OUTER JOIN과 같은 말
 
 </br>
 
 ---
 
 ### 실전을 위한 SQL 무료 강의 (15/18) : Right Join
+</br>
 
+- RIGHT JOIN은 테이블2에 있는 모든 행을 출력
+- ON 조건이 맞지 않는 경우 왼쪽 테이블의 값은 NULL로 출력됨
+- RIGHT JOIN은 실전에서 거의 사용하지 않는다고 봐도 무방함 (LEFT JOIN 반대이기 때문)
+- RIGHT JOIN은 RIGHT OUTER JOIN과 같은 말
+```sql
+SELECT      테이블1.열이름, 테이블2.열이름
+FROM        테이블 1
+RIGHT JOIN  테이블 2
+ON          테이블1.열이름 = 테이블2.열이름
+```
 </br>
 
 ---
 
 ### 실전을 위한 SQL 무료 강의 (16/18) : Full Join
+</br>
+
+- FULL JOIN은 테이블1, 2에 있는 모든 행을 출력
+- FULL JOIN은 FULL OUTER JOIN과 같은 말
+```sql
+SELECT     테이블1.열이름, 테이블2.열이름
+FROM       테이블 1
+FULL JOIN  테이블 2
+ON         테이블1.열이름 = 테이블2.열이름
+```
+
+</br>
+
+---
