Update 5. 실전을 위한 SQL 무료 강의.md

--- a/SQL/5. 실전을 위한 SQL 무료 강의.md
+++ b/SQL/5. 실전을 위한 SQL 무료 강의.md
@@ -365,7 +365,9 @@ ON          테이블1.열이름 = 테이블2.열이름
 ### 실전을 위한 SQL 무료 강의 (16/18) : Full Join
 </br>
 
-- FULL JOIN은 테이블1, 2에 있는 모든 행을 출력
+- 두 테이블을 조건(ON절) 기준으로 합침
+- 공통 데이터뿐만 아니라 테이블1, 2에 있는 모든 행을 출력
+- 조건에 맞지 않는 경우는 NULL로 채워짐
 - FULL JOIN은 FULL OUTER JOIN과 같은 말
 ```sql
 SELECT     테이블1.열이름, 테이블2.열이름
@@ -377,3 +379,46 @@ ON         테이블1.열이름 = 테이블2.열이름
 </br>
 
 ---
+
+### 실전을 위한 SQL 무료 강의 (17/18) : Union
+</br>
+
+- 두 SELECT 결과를 위로 붙이는 방식 (행 합치기)
+- 기본적으로 중복 제거 (UNION ALL 쓰면 중복도 출력)
+- JOIN처럼 열끼리 묶는 게 아님 → 단순히 "행"을 합치는 것 (차근차근 쌓는 것)
+```sql
+SELECT  열이름
+FROM    테이블 1
+UNION
+SELECT  열이름
+FROM    테이블 2
+```
+</br>
+
+### UNION 사용법
+1. UNION 앞에 써있는 쿼리 결과와 UNION 뒤에 써있는 쿼리 결과를 합쳐줌 (concat)
+2. 이어주는 테이블의 열의 갯수가 같고, 열의 순서도 같아야 함
+3. 열의 이름은 같을 필요가 없지만 그 열의 데이터 타입은 같아야 함 (boolean, date, etc). 열의 이름은 UNION 전에 오는 테이블의 이름을 따름
+4. 중복되는 항목이 있을시에는 자동으로 하나만 출력. 중복되는 항목을 모두 출력하고 싶을 경우 UNION ALL을 사용.
+
+</br>
+
+---
+
+### 실전을 위한 SQL 무료 강의 (18/18) : SubQuery
+</br>
+
+- 매니저가 가게주문한 사람중에 온라인 주문을 안한 사람의 고객번호 리스트를 뽑아오라고 할 때
+```sql
+SELECT  *
+FROM 가게주문
+WHERE 고객번호 NOT IN (SELECT 고객번호 FROM 온라인주문)       // 서브쿼리
+```
+
+### SUBQUERY 사용법
+1. SQL 쿼리 안에 또 다른 쿼리가 있는 것 (괄호로 구별)
+2. 다음구문에 SUBQUERY가 이용
+   1) WHERE
+   2) FROM
+   3) SELECT
+   
