Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -1,1 +1,16 @@
+# SQL 활용
+### SQL 활용 (1/5) : 연산자 및 함수 (1) 
+</br>
 
+### 연산자
+- 연산자는 비교, 논리, 특수, 산술, 집합연산자로 나뉨
+<img width="991" height="461" alt="image" src="https://github.com/user-attachments/assets/b79a2260-dfb1-45be-93ce-515292b419af" />
+</br>
+</br>
+</br>
+
+### 집합연산자 – UNION, UNION ALL
+- UNION: 2개 이상 테이블의 중복된 행들을 제거하여 집합
+- UNION ALL: 2개 이상 테이블의 중복된 행들을 제거 없이 집합 
+* 열 개수와 데이터 타입 일치해야 함
+<img width="587" height="326" alt="image" src="https://github.com/user-attachments/assets/cacbbf18-678c-4f94-9f4c-3fb7fd014a1b" />
