Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -9,7 +9,17 @@
 </br>
 </br>
 
-### - 예제
+###  비교 연산자
+### 1. = (같음)
+- 특정 값과 같은 데이터를 조회할 때 사용
+```sql
+/* = : 같음 */
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  GENDER = 'MAN';
+```
+</br>
+
 
 ### 집합연산자 – UNION, UNION ALL
 - UNION: 2개 이상 테이블의 중복된 행들을 제거하여 집합
