Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -22,6 +22,65 @@ SELECT  *
 ```
 </br>
 
+### 2. <> (같지 않음)
+- 특정 값과 다른 데이터를 조회할 때 사용
+```sql
+/* <> : 같지 않음 */ 
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  GENDER <> 'MAN';
+```
+</br>
+
+### 3. >= (크거나 같음)
+- 기준 값 이상인 데이터를 조회할 때 사용
+```sql
+/* >= : ~보다 크거나 같음 */  
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  YEAR(JOIN_DATE) >= 2020;
+```
+</br>
+
+### 4. <= (작거나 같음)
+- 기준 값 이하인 데이터를 조회할 때 사용
+```sql
+/* <= : ~보다 작거나 같음 */  
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  YEAR(JOIN_DATE) <= 2019;
+```
+</br>
+
+### 5. > (큼)
+- 기준 값보다 큰 데이터를 조회할 때 사용
+```sql
+/* > : ~보다 큼 */  
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  YEAR(JOIN_DATE) > 2019;
+```
+</br>
+
+### 6. < (작음)
+- 기준 값보다 작은 데이터를 조회할 때 사용
+```sql
+/* < : ~보다 작음 */  
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  YEAR(JOIN_DATE) < 2020;
+```
+</br>
+
+
+
+
+
+```sql
+```
+</br>
+
+
 
 ### 집합연산자 – UNION, UNION ALL
 - UNION: 2개 이상 테이블의 중복된 행들을 제거하여 집합
