--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -69,12 +69,144 @@ SELECT  *
 </br>
 
 ### < 논리 연산자 >
+</br>
 
+### 1. AND (그리고)
+- 앞뒤 조건이 모두 참(TRUE) 일 때만 결과 반환
+```sql
+/* AND : 앞, 뒤 조건 모두 만족 */
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  GENDER = 'MAN'
+   AND  ADDR = 'Gyeonggi';
+```
+
+### 2. NOT (부정)
+- 뒤 조건을 반대로 해석
+```sql
+/* NOT : 뒤에 오는 조건과 반대 */ 
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  NOT GENDER = 'MAN'
+   AND  ADDR = 'Gyeonggi';
+```
+
+### 3. OR (또는)
+- 앞뒤 조건 중 하나라도 참(TRUE) 이면 결과 반환
+```sql
+/* OR : 하나라도 만족 */    
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  GENDER = 'MAN'
+    OR  ADDR = 'Gyeonggi';
+```
+</br>
+
+### < 특수 연산자 >
+</br>
+
+### 1. BETWEEN a AND b
+- 값이 a 이상, b 이하 범위에 포함될 때 참
+```sql
+/* BETWEEN a AND b : a와 b의 값 사이 */
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  YEAR(BIRTHDAY) BETWEEN 2010 AND 2011;
+```
+
+### 2. NOT BETWEEN a AND b
+- 값이 a ~ b 범위에 속하지 않는 경우
+```sql
+/* NOT BETWEEN a AND b : a와 b의 값 사이가 아님 */
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  YEAR(BIRTHDAY) NOT BETWEEN 1950 AND 2020;
+```
+
+### 3. IN (리스트)
+- 여러 값 중 하나라도 일치하면 참
+```sql
+/* IN (List) : 리스트 값 */ 
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  YEAR(BIRTHDAY) IN (2010,2011);    // 생년이 2010년 또는 2011년인 고객 조회
+```
+
+### 4. NOT IN (리스트)
+- 리스트 값에 포함되지 않음
+```sql
+/* NOT IN (List) : 리스트 값이 아님 */  
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  YEAR(BIRTHDAY) NOT IN (2010, 2011);    // 생년이 2010, 2011년이 아닌 고객 조회
+```
+
+### 5. LIKE (패턴 검색)
+- % : 0글자 이상 모든 문자
+- _ : 1글자 와일드카드
+```sql
+/* LIKE ‘비교문자열’ */   
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  ADDR LIKE 'D%'; /* ~로 시작하는 */
+
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  ADDR LIKE '%N'; /* ~로 끝나는 */
+ 
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  ADDR LIKE '%EO%'; /* ~를 포함하는 */
+```
+
+### 6. NOT LIKE
+- 패턴과 일치하지 않는 값 찾기
+```sql
+/* NOT LIKE ‘비교문자열’ */   
+SELECT  *
+  FROM  CUSTOMER
+ WHERE  ADDR NOT LIKE '%EO%'; /* ~를 제외하는 */
+```
+
+### 7. IS NULL
+- 값이 NULL(없음) 인 경우
+```sql
+/* IS NULL : NULL */   
+SELECT  *
+  FROM  CUSTOMER AS A
+  LEFT
+  JOIN  SALES AS B
+    ON  A.MEM_NO = B.MEM_NO
+ WHERE  B.MEM_NO IS NULL;
+
+/* 확인 */ 
+SELECT  *
+  FROM  SALES
+ WHERE  MEM_NO = '1001736';    // B.MEM_NO IS NULL을 확인
+```
+
+### 8. IS NOT NULL
+- 값이 NULL이 아닌 경우
+```sql
+/* IS NULL : NULL */   
+SELECT  *
+  FROM  CUSTOMER AS A
+  LEFT
+  JOIN  SALES AS B
+    ON  A.MEM_NO = B.MEM_NO
+ WHERE  B.MEM_NO IS NULL;
+```
+</br>
+
+### < 산술 연산자 >
+</br>
+
+### 1. BETWEEN a AND b
 
 
 ```sql
 ```
-</br>
+
 
 
 
