Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -68,7 +68,6 @@ SELECT  *
 </br>
 
 ### < 논리 연산자 >
-</br>
 
 ### 1. AND (그리고)
 - 앞뒤 조건이 모두 참(TRUE) 일 때만 결과 반환
@@ -198,16 +197,20 @@ SELECT  *
 </br>
 
 ### < 산술 연산자 >
-</br>
 
-### 1. BETWEEN a AND b
-
-
+### 1. 곱셈 (*)
+- 판매수량(SALES_QTY) × 단가(PRICE) 를 곱해서 결제금액 산출
 ```sql
+/***************산술 연산자***************/
+  
+SELECT  *
+		,A.SALES_QTY * PRICE AS 결제금액
+  FROM  SALES AS A
+  LEFT
+  JOIN  PRODUCT AS B
+    ON  A.PRODUCT_CODE = B.PRODUCT_CODE;
 ```
-
-
-
+</br>
 
 ### 집합연산자 – UNION, UNION ALL
 - UNION: 2개 이상 테이블의 중복된 행들을 제거하여 집합
