Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -221,3 +221,9 @@ SELECT  *
 - UNION ALL: 2개 이상 테이블의 중복된 행들을 제거 없이 집합 
 * 열 개수와 데이터 타입 일치해야 함
 <img width="587" height="326" alt="image" src="https://github.com/user-attachments/assets/cacbbf18-678c-4f94-9f4c-3fb7fd014a1b" />
+</br>
+</br>
+</br>
+</br>
+
+### < 집합 연산자 >
