--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -4,6 +4,8 @@
 
 ### 연산자
 - 연산자는 비교, 논리, 특수, 산술, 집합연산자로 나뉨
+<img width="457" height="356" alt="image" src="https://github.com/user-attachments/assets/b3b530b8-88b0-4006-ad62-7be23ada7939" />
+
 <img width="991" height="461" alt="image" src="https://github.com/user-attachments/assets/b79a2260-dfb1-45be-93ce-515292b419af" />
 </br>
 </br>
