--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -223,6 +223,9 @@ SELECT  *
 - UNION ALL: 2개 이상 테이블의 중복된 행들을 제거 없이 집합 
 * 열 개수와 데이터 타입 일치해야 함
 <img width="587" height="326" alt="image" src="https://github.com/user-attachments/assets/cacbbf18-678c-4f94-9f4c-3fb7fd014a1b" />
+
+<img width="940" height="407" alt="image" src="https://github.com/user-attachments/assets/f9e47630-fe4c-4388-9b4d-428c57799ede" />
+
 </br>
 </br>
 </br>
@@ -260,3 +263,8 @@ UNION ALL
 SELECT  *
   FROM  SALES;
 ```
+</br>
+
+---
+
+###
