Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -2,7 +2,7 @@
 ### SQL 활용 (1/5) : 연산자 및 함수 (1) 
 </br>
 
-### 연산자
+### < 연산자 >
 - 연산자는 비교, 논리, 특수, 산술, 집합연산자로 나뉨
 <img width="457" height="356" alt="image" src="https://github.com/user-attachments/assets/b3b530b8-88b0-4006-ad62-7be23ada7939" />
 
@@ -218,7 +218,7 @@ SELECT  *
 </br>
 </br>
 
-### 집합연산자 – UNION, UNION ALL
+### < 집합연산자 – UNION, UNION ALL >
 - UNION: 2개 이상 테이블의 중복된 행들을 제거하여 집합
 - UNION ALL: 2개 이상 테이블의 중복된 행들을 제거 없이 집합 
 * 열 개수와 데이터 타입 일치해야 함
@@ -267,4 +267,4 @@ SELECT  *
 
 ---
 
-###
+### SQL 활용 (2/5) : 연산자 및 함수 (2)
