--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -269,3 +269,21 @@ SELECT  *
 ---
 
 ### SQL 활용 (2/5) : 연산자 및 함수 (2)
+</br>
+
+### < 함수 >
+- 함수는 단일 및 복수 행 그리고 윈도우 함수로 나뉘며, 특정 규칙에 의해 새로운 결과값으로 반환하는 명령어
+<img width="940" height="432" alt="image" src="https://github.com/user-attachments/assets/87b47b0c-5d34-4bf2-8109-0e452bf18c1f" />
+</br>
+</br>
+</br>
+</br>
+
+### < 단일 행 함수 > 
+- 단일 행 함수는 모든 행에 대하여 각각 함수가 적용되어 반환함
+- 함수들을 중첩해서 사용 가능
+<img width="940" height="208" alt="image" src="https://github.com/user-attachments/assets/174c46dd-0b21-4ea0-b442-066addc06af9" />
+- 단일 행 함수는 숫자형, 문자형, 날짜형, 형변환, 일반함수로 나뉨
+<img width="1012" height="431" alt="image" src="https://github.com/user-attachments/assets/c8d36f90-6a86-474f-99e2-1a15f7ba07cc" />
+
+
