Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -285,5 +285,24 @@ SELECT  *
 
 - 단일 행 함수는 숫자형, 문자형, 날짜형, 형변환, 일반함수로 나뉨
 <img width="1012" height="431" alt="image" src="https://github.com/user-attachments/assets/c8d36f90-6a86-474f-99e2-1a15f7ba07cc" />
+</br>
+</br>
+</br>
+</br>
+
+### < 숫자형 연산 >
+
+### 1. ABS(숫자) : 절대값 반환
+- 음수를 양수로 변환, 양수는 그대로 반환
+```sql
+/* ABS(숫자) : 절대값 반환 */
+SELECT ABS(- 200); 				// 200
+```
 
 
+
+
+
+
+```sql
+```
