Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -299,8 +299,12 @@ SELECT  *
 SELECT ABS(- 200); 				// 200
 ```
 
-
-
+### 2. ROUND(숫자, N) : 반올림
+- 소수점 N번째 자리에서 반올림
+```sql
+/* ROUND(숫자, N) : N 기준으로 반올림 값 반환 */
+SELECT ROUND(2.18, 1);		// 2.2
+```
 
 
 
