Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -444,6 +444,15 @@ SELECT  *
 </br>
 
 ### < 복수 행 함수 >
+- 복수 행 함수는 여러 행들이 하나의 결과값으로 반환
+<img width="940" height="338" alt="image" src="https://github.com/user-attachments/assets/d9565c2f-1f81-4e7f-b64d-e3f7f4cc17b0" />
+
+- 복수 행 함수는 집계, 그룹 함수로 나뉨
+<img width="991" height="206" alt="image" src="https://github.com/user-attachments/assets/67f2445a-52f5-447b-9594-e87063ba95f4" />
+
+- 복수 행 함수는 여러 행들이 하나의 결과 값으로 반환
+- 주로 GROUP BY절과 함께 사용됨
+
 
 
 ```sql
