Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -452,8 +452,56 @@ SELECT  *
 
 - 복수 행 함수는 여러 행들이 하나의 결과 값으로 반환
 - 주로 GROUP BY절과 함께 사용됨
+</br>
+</br>
+</br>
+</br>
 
-
-
+### 1. 집계 함수
+- COUNT(컬럼명) : 행 개수
+- COUNT(DISTINCT 컬럼) : 중복 제거된 행 개수
+- SUM(숫자컬럼) : 합계
+- AVG(숫자컬럼) : 평균
+- MAX(컬럼) : 최댓값
+- MIN(컬럼) : 최솟값
 ```sql
+SELECT  COUNT(ORDER_NO) AS 구매횟수 /* 행수 */
+		,COUNT(DISTINCT MEM_NO) AS 구매자수 /* 중복제거된 행수  */
+        ,SUM(SALES_QTY) AS 구매수량 /* 합계 */
+        ,AVG(SALES_QTY) AS 평균구매수량 /* 평균 */
+        ,MAX(ORDER_DATE) AS 최근구매일자 /* 최대 */
+        ,MIN(ORDER_DATE) AS 최초구매일자 /* 최소 */
+  FROM  SALES;
+    
+/* DISTINCT: 중복제거 */   
+```
+
+### 2. 그룹 함수
+- GROUP BY는 데이터를 그룹별(묶음) 로 나누어 집계함
+- WITH ROLLUP은 그룹화된 열들을 오른쪽에서 왼쪽 순으로 점점 합쳐가며 집계
+```sql
+/* WITH ROLLUP : GROUP BY 열들을 오른쪽에서 왼쪽순으로 그룹 (소계, 합계)*/
+SELECT  YEAR(JOIN_DATE) AS 가입연도
+		,ADDR
+        ,COUNT(MEM_NO) AS 회원수
+  FROM  CUSTOMER
+ GROUP
+    BY  YEAR(JOIN_DATE)
+		,ADDR
+WITH ROLLUP;
+```
+
+### 3. 집계 함수 + GROUP BY
+- 회원별 총 구매 수량을 구하는 쿼리
+```sql
+SELECT  MEM_NO
+        ,SUM(SALES_QTY) AS 구매수량
+  FROM  SALES
+ GROUP
+    BY  MEM_NO;
+    
+/* 확인 */
+SELECT  *
+  FROM  SALES
+ WHERE  MEM_NO = '1000970';
 ```
