--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -442,6 +442,7 @@ SELECT  *
 ```
 </br>
 </br>
+</br>
 
 ### < 복수 행 함수 >
 - 복수 행 함수는 여러 행들이 하나의 결과값으로 반환
@@ -505,3 +506,16 @@ SELECT  *
   FROM  SALES
  WHERE  MEM_NO = '1000970';
 ```
+</br>
+</br>
+</br>
+
+### < 윈도우 함수 >
+- 윈도우 함수는 행과 행간의 관계를 정의하여 결과 값을 반환
+<img width="940" height="369" alt="image" src="https://github.com/user-attachments/assets/d1d7b570-68e5-4a62-9e01-95ffcedb5980" />
+
+- 윈도우 함수는 순위, 집계(누적) 함수로 나뉨
+<img width="1004" height="261" alt="image" src="https://github.com/user-attachments/assets/77b754e3-b2f9-40ef-92d3-9002eb69ed02" />
+
+- 윈도우 함수는 ORDER BY로 행과 행간의 순서를 정하며, PARTITION BY로 그룹화가 가능
+<img width="720" height="348" alt="image" src="https://github.com/user-attachments/assets/ad982af6-0e69-4d63-a4e1-d5ad87f1c6d6" />
