Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -524,3 +524,54 @@ SELECT  *
 </br>
 
 <img width="720" height="348" alt="image" src="https://github.com/user-attachments/assets/ad982af6-0e69-4d63-a4e1-d5ad87f1c6d6" />
+</br>
+</br>
+</br>
+</br>
+
+### < 순위 함수 >
+
+### 1. ROW_NUMBER()
+- 동일한 값이라도 무조건 1, 2, 3… 순차 번호 부여
+```sql
+ROW_NUMBER() OVER (ORDER BY ORDER_DATE ASC)  
+```
+
+### 2. RANK()
+- 동일한 값이면 같은 순위,
+- 다음 순위는 건너뜀 (1,2,3,3,5 …)
+```sql
+RANK() OVER (ORDER BY ORDER_DATE ASC)
+```
+
+### 3. DENSE_RANK()
+- 동일한 값은 같은 순위,
+- 다음 순위는 건너뛰지 않음 (1,2,3,3,4 …)
+```sql
+DENSE_RANK() OVER (ORDER BY ORDER_DATE ASC)
+```
+
+### 4. PARTITION BY 사용
+- 회원별(MEM_NO 그룹별) 주문일 순위.
+- 각 회원의 첫 번째 주문, 두 번째 주문… 을 알 수 있음
+```sql
+ROW_NUMBER() OVER (PARTITION BY MEM_NO ORDER BY ORDER_DATE ASC)
+```
+</br>
+</br>
+
+### 1. 순위 함수
+```sql
+/***************순위 함수***************/ 
+/* ROW_NUMBER: 동일한 값이라도 고유한 순위 반환 (1,2,3,4,5...) */
+/* RANK: 동일한 값이면 동일한 순위 반환 (1,2,3,3,5...) */
+/* DENSE_RANK: 동일한 값이면 동일한 순위 반환(+ 하나의 등수로 취급) (1,2,3,3,4...) */
+
+SELECT  ORDER_DATE
+		,ROW_NUMBER() OVER (ORDER BY ORDER_DATE ASC) AS 고유한_순위_반환
+        ,RANK() 	  OVER (ORDER BY ORDER_DATE ASC) AS 동일한_순위_반환
+        ,DENSE_RANK() OVER (ORDER BY ORDER_DATE ASC) AS 동일한_순위_반환_하나의등수
+  FROM  SALES;
+```
+
+###
