Update 4. SQL 활용.md

--- a/SQL/4. SQL 활용.md
+++ b/SQL/4. SQL 활용.md
@@ -561,6 +561,7 @@ ROW_NUMBER() OVER (PARTITION BY MEM_NO ORDER BY ORDER_DATE ASC)
 </br>
 
 ### 1. 순위 함수
+- SALES 테이블의 주문일자(ORDER_DATE)를 기준으로 순위를 매김
 ```sql
 /***************순위 함수***************/ 
 /* ROW_NUMBER: 동일한 값이라도 고유한 순위 반환 (1,2,3,4,5...) */
@@ -574,4 +575,48 @@ SELECT  ORDER_DATE
   FROM  SALES;
 ```
 
-###
+### 2. 순위 함수+ PARTITION BY: 그룹별 순위
+- 회원(MEM_NO)별로 주문일자 순위를 매김
+```sql
+/* 순위 함수+ PARTITION BY: 그룹별 순위 */
+
+SELECT  MEM_NO
+		,ORDER_DATE
+		,ROW_NUMBER() OVER (PARTITION BY MEM_NO ORDER BY ORDER_DATE ASC) AS 고유한_순위_반환
+        ,RANK() 	  OVER (PARTITION BY MEM_NO ORDER BY ORDER_DATE ASC) AS 동일한_순위_반환
+        ,DENSE_RANK() OVER (PARTITION BY MEM_NO ORDER BY ORDER_DATE ASC) AS 동일한_순위_반환_하나의등수
+  FROM  SALES;
+```
+
+### 3. 집계 함수(누적)
+- ORDER_DATE 순으로 데이터를 정렬하면서, 각 시점까지의 누적 합계/평균/최댓값/최솟값 등을 구함
+```sql
+/***************집계 함수(누적)***************/ 
+
+SELECT  ORDER_DATE
+		,SALES_QTY
+        ,'-' AS 구분
+        ,COUNT(ORDER_NO) OVER (ORDER BY ORDER_DATE ASC) AS 누적_구매횟수
+		,SUM(SALES_QTY)  OVER (ORDER BY ORDER_DATE ASC) AS 누적_구매수량
+        ,AVG(SALES_QTY)  OVER (ORDER BY ORDER_DATE ASC) AS 누적_평균구매수량
+        ,MAX(SALES_QTY)  OVER (ORDER BY ORDER_DATE ASC) AS 누적_가장높은구매수량
+		,MIN(SALES_QTY)  OVER (ORDER BY ORDER_DATE ASC) AS 누적_가장낮은구매수량    
+  FROM  SALES;
+```
+
+### 4. 집계 함수(누적)+ PARTITION BY: 그룹별 집계 함수(누적)
+- 회원별(MEM_NO) 누적 통계를 구함
+```sql
+/* 집계 함수(누적)+ PARTITION BY: 그룹별 집계 함수(누적) */
+
+SELECT  MEM_NO
+		,ORDER_DATE
+		,SALES_QTY
+        ,'-' AS 구분
+        ,COUNT(ORDER_NO) OVER (PARTITION BY MEM_NO ORDER BY ORDER_DATE ASC) AS 누적_구매횟수        
+		,SUM(SALES_QTY)  OVER (PARTITION BY MEM_NO ORDER BY ORDER_DATE ASC) AS 누적_구매수량
+        ,AVG(SALES_QTY)  OVER (PARTITION BY MEM_NO ORDER BY ORDER_DATE ASC) AS 누적_평균구매수량
+        ,MAX(SALES_QTY)  OVER (PARTITION BY MEM_NO ORDER BY ORDER_DATE ASC) AS 누적_가장높은구매수량
+		,MIN(SALES_QTY)  OVER (PARTITION BY MEM_NO ORDER BY ORDER_DATE ASC) AS 누적_가장낮은구매수량       
+  FROM  SALES;
+```
