--- a/SQL/6. Quiz 총 정리.md
+++ b/SQL/6. Quiz 총 정리.md
@@ -1,6 +1,5 @@
 # Quiz 
 ### < Quiz (1/5) – SQL 기본 구조 >
-</br>
 
 ### Q1. 관계(Relationship)(단일선택, 1점)
 - 다음 중, 관계형 테이블 간의 관계 형태가 아닌 것은?
@@ -19,29 +18,43 @@
 3. postgreSQL
 4. MSSQL
 
-Q3. 데이터베이스 생성(단일선택, 2점)
+- 정답 : (2)
+</br>
+
+### Q3. 데이터베이스 생성(단일선택, 2점)
 - 다음 중, 데이터베이스 생성과 관련된 명령어는?
 1. Create
 2. Drop
 3. Use
 4. Delete
 
-Q4. 데이터베이스 사용(단일선택, 2점)
+- 정답 : (1)
+</br>
+
+### Q4. 데이터베이스 사용(단일선택, 2점)
 - 다음 중, 데이베이스 사용과 관련된 명령어는?
 1. Create
 2. Drop
 3. Use
 4. Delete
 
-Q5. 데이터베이스 삭제(단일선택, 2점)
+- 정답 : (3)
+</br>
+
+### Q5. 데이터베이스 삭제(단일선택, 2점)
 - 다음 중, 데이터 베이스 삭제와 관련된 명령어는?
 1. Create
 2. Drop
 3. Use
 4. Delete
 
-Quiz (2/5) – SQL 명령어
-Q1. 데이터 조작어(단일선택, 2점)
+- 정답 : (2)
+</br>
+</br>
+
+### Quiz (2/5) – SQL 명령어
+
+### Q1. 데이터 조작어(단일선택, 2점)
 - 다음 중, 데이터 조작어와 관련 없는 명령어는?
 1. Delete
 2. Create
