Update 6. Quiz 총 정리.md

--- a/SQL/6. Quiz 총 정리.md
+++ b/SQL/6. Quiz 총 정리.md
@@ -52,7 +52,7 @@
 </br>
 </br>
 
-### Quiz (2/5) – SQL 명령어
+### < Quiz (2/5) – SQL 명령어 >
 
 ### Q1. 데이터 조작어(단일선택, 2점)
 - 다음 중, 데이터 조작어와 관련 없는 명령어는?
@@ -61,96 +61,141 @@
 3. Update
 4. Insert
 
-Q2. 데이터 타입(단일선택, 2점)
+- 정답 : (2)
+</br>
+
+### Q2. 데이터 타입(단일선택, 2점)
 - 다음 중, 숫자형이 아닌 데이터 타입은?
 1. Int
 2. Varchar
 3. Double
 4. Bit
 
-Q3. 데이터 정의어(다중선택, 3점)
+- 정답 : (2)
+</br>
+
+### Q3. 데이터 정의어(다중선택, 3점)
 - 다음 중, 테이블에 열 추가와 관련 있는 명령어는?
 1. Alter
 2. Modify
 3. Add
 4. Change
 
-Q4. 데이터 제어어(단일선택, 2점)
+- 정답 : (1), (3)
+</br>
+
+### Q4. 데이터 제어어(단일선택, 2점)
 - 다음 중, DBA가 User에게 데이터 사용 권한을 부여하는 명령어는?
 1. Use
 2. Revoke
 3. Grant
 4. Send
 
-Q5. 트랜젝션 제어어(단일선택, 2점)
+- 정답 : (3)
+</br>
+
+### Q5. 트랜젝션 제어어(단일선택, 2점)
 - 다음 중, 트랜젝션 제어어와 관련 없는 명령어는?
 1. Revoke
 2. Rollback
 3. Savepoint
 4. Commit
 
-Quiz (3/5) – SQL 문법
-Q1. 데이터 조회(단일선택, 2점)
+- 정답 : (1)
+</br>
+</br>
+
+### Quiz (3/5) – SQL 문법
+
+### Q1. 데이터 조회(단일선택, 2점)
 - 다음 중, 그룹화된 새로운 테이블을 특정 조건으로 필터링하는 명령어는?
 1. FROM
 2. HAVING
 3. GROUP BY
 4. WHERE
 
-Q2. 데이터 조회(단일선택, 2점)
+- 정답 : (2)
+</br>
+
+### Q2. 데이터 조회(단일선택, 2점)
 - 다음 중, ORDER BY절에서 오름차순으로 정렬하는 명령어는?
 1. ASC
 2. DESC
 3. DOWN
 4. UP
 
-Q3. 테이블 결합(단일선택, 2점)
+- 정답 : (1)
+</br>
+
+### Q3. 테이블 결합(단일선택, 2점)
 - 다음 중, 하나 이상의 속성(Attribute)으로 구성된 것은?
 1. 개체
 2. 속성
 3. 관계
 4. 데이터베이스
 
-Q4. 테이블 결합(단일선택, 3점)
+- 정답 : (1)
+</br>
+
+### Q4. 테이블 결합(단일선택, 3점)
 - 다음 중, 두 테이블의 공통 값이 매칭되는 데이터만 결합하는 명령어는?
 1. INNER JOIN
 2. RIGHT JOIN
 3. TWO JOIN
 4. LEFT JOIN
 
-Q5. 데이터베이스 삭제(단일선택, 2점)
+- 정답 : (1)
+</br>
+
+### Q5. 데이터베이스 삭제(단일선택, 2점)
 - 다음 중, 데이터 베이스 삭제와 관련된 명령어는?
 1. Create
 2. Drop
 3. Use
 4. Delete
 
-Quiz (4/5) – SQL 활용
-Q1. 연산자(단일선택, 2점)
+- 정답 : (2)
+</br>
+</br>
+
+### Quiz (4/5) – SQL 활용
+
+### Q1. 연산자(단일선택, 2점)
 - 다음 중, 논리 연산자가 아닌 것은?
 1. IN
 2. NOT
 3. AND
 4. OR
 
-Q2. 단일 행 함수(단일선택, 2점)
+- 정답 : (1)
+</br>
+
+### Q2. 단일 행 함수(단일선택, 2점)
 - 다음 중, 단일 행 함수가 아닌 것은?
 1. 숫자형
 2. 지도형
 3. 형 변환
 4. 날짜형
 
-Q3. 복수 행 함수(단일선택, 2점)
+- 정답 : (2)
+</br>
+
+### Q3. 복수 행 함수(단일선택, 2점)
 - 다음 중, 복수 행 함수가 아닌 것은?
 1. COUNT
 2. ABS
 3. SUM
 4. MIN
 
-Q4. 윈도우 함수(단일선택, 2점)
+- 정답 : (2)
+</br>
+
+### Q4. 윈도우 함수(단일선택, 2점)
 - 다음 중, 순위 함수가 아닌 것은?
 1. ROW_NUMBER
 2. DENSE_RANK
 3. RANK_UP
 4. RANK
 
+- 정답 : (3)
+</br>
