--- a/설계/3. ERD.md
+++ b/설계/3. ERD.md
@@ -1,1 +1,8 @@
+# ERD
+
+### < ERD (Entity Relationship Diagram) >
+- 테이블 구조를 시각적으로 파악하기 위함
+- 테이블 간의 관계를 나타내기 위함
+
+<img width="435" height="295" alt="image" src="https://github.com/user-attachments/assets/e81e8053-b671-49ae-b1d9-6d138cd4655a" />
 
