--- a/설계/3. ERD.md
+++ b/설계/3. ERD.md
@@ -6,3 +6,8 @@
 
 <img width="435" height="295" alt="image" src="https://github.com/user-attachments/assets/e81e8053-b671-49ae-b1d9-6d138cd4655a" />
 
+- ONE : 하나의 A는 하나의 B로 연관
+- MANY : 하나의 A는 여러 개의 B로 연관
+- One or Many : 하나의 A는 1개 또는 여러 개의 B로 연관
+
+<img width="966" height="183" alt="image" src="https://github.com/user-attachments/assets/1f42f102-e27b-41dc-ab21-4d15545d5884" />
