--- a/설계/2. DB.md
+++ b/설계/2. DB.md
@@ -1,1 +1,4 @@
+# DB
+### < Cardinality >
+<img width="841" height="473" alt="image" src="https://github.com/user-attachments/assets/aea741ae-fee3-4940-a5ae-7df748d1d225" />
 
