--- a/설계/2. DB.md
+++ b/설계/2. DB.md
@@ -2,3 +2,6 @@
 ### < Cardinality >
 <img width="841" height="473" alt="image" src="https://github.com/user-attachments/assets/aea741ae-fee3-4940-a5ae-7df748d1d225" />
 
+<img width="844" height="475" alt="image" src="https://github.com/user-attachments/assets/ad706d77-80dc-47b2-b37e-afb60cfff837" />
+
+<img width="850" height="478" alt="image" src="https://github.com/user-attachments/assets/78310777-f548-44d0-9b8f-3d5bb3887951" />
