--- a/설계/2. DB.md
+++ b/설계/2. DB.md
@@ -1,7 +1,10 @@
 # DB
 ### < Cardinality >
+- 1대1 관계
 <img width="841" height="473" alt="image" src="https://github.com/user-attachments/assets/aea741ae-fee3-4940-a5ae-7df748d1d225" />
 
+- 1대N 관계
 <img width="844" height="475" alt="image" src="https://github.com/user-attachments/assets/ad706d77-80dc-47b2-b37e-afb60cfff837" />
 
+- N대M 관계
 <img width="850" height="478" alt="image" src="https://github.com/user-attachments/assets/78310777-f548-44d0-9b8f-3d5bb3887951" />
