--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -25,6 +25,20 @@
 ---
 
 ### 프로세스 (2/6) : 안전하고 효율적인 구조
+- 중복 제거하기 (데이터 중복, 관계 중복)
+</br>
+
+### < 1차 정규화>
+- 테이블의 각 컬럼이 원자값(하나의 값)을 가져야 하며, 같은 컬럼 내에서 중복된 값을 허용하지 않음.
+- 한 칸에 하나의 데이터
+<img width="512" height="372" alt="image" src="https://github.com/user-attachments/assets/0de09b09-18f3-42a4-b63c-61c7c980432e" />
+</br>
+</br>
+
+### < 2차 정규화 >
+- 1차 정규화를 만족하며, 복합키의 일부에만 종속되는 속성이 없어야 함 (부분 종속 없애기)
+<img width="503" height="438" alt="image" src="https://github.com/user-attachments/assets/e03f4801-01e0-48e7-b349-cce43b673024" />
+
 
 ### 프로세스 (3/6) : 쇼핑몰 주문관리 구축하기  #1
 
