--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -34,10 +34,19 @@
 <img width="512" height="372" alt="image" src="https://github.com/user-attachments/assets/0de09b09-18f3-42a4-b63c-61c7c980432e" />
 </br>
 </br>
+</br>
 
 ### < 2차 정규화 >
 - 1차 정규화를 만족하며, 복합키의 일부에만 종속되는 속성이 없어야 함 (부분 종속 없애기)
 <img width="503" height="438" alt="image" src="https://github.com/user-attachments/assets/e03f4801-01e0-48e7-b349-cce43b673024" />
+</br>
+</br>
+</br>
+
+### < 3차 정규화 >
+- 2차 정규화를 만족하며, 기본키가 아닌 다른 속성에 종속되는 속성이 없어야 함. (이행적 종속 없애기)
+- 이행적 종속: A → B, B → C 이면, A → C 라고 할 수 있음. 여기서 C가 사실 A를 직접 의존하지 않고 B를 통해서만 알 수 있는 것.
+<img width="514" height="411" alt="image" src="https://github.com/user-attachments/assets/73386214-d19e-429b-9c4a-18798b2976ef" />
 
 
 ### 프로세스 (3/6) : 쇼핑몰 주문관리 구축하기  #1
