--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -55,6 +55,39 @@
 ---
 
 ### 프로세스 (3/6) : 쇼핑몰 주문관리 구축하기  #1
+</br>
+
+### < 주요 기능 및 요구사항 >
+<img width="821" height="471" alt="image" src="https://github.com/user-attachments/assets/3dfeafc8-7868-4802-8140-345f81cecc74" />
+</br>
+</br>
+</br>
+
+### < 요구사항에서부터 도출한 엔티티 목록 >
+<img width="322" height="371" alt="image" src="https://github.com/user-attachments/assets/9af0d164-de12-41e6-81dc-88eff995e369" />
+</br>
+</br>
+</br>
+
+### < 기능 설계 >
+<img width="883" height="435" alt="image" src="https://github.com/user-attachments/assets/1860ae1c-b441-4016-96cf-0b26297b9626" />
+</br>
+</br>
+</br>
+
+### < 기능 - 엔티티 매핑 >
+<img width="754" height="337" alt="image" src="https://github.com/user-attachments/assets/01c38304-4d73-4228-bccf-749489b557fc" />
+</br>
+</br>
+</br>
+
+### < ERD >
+<img width="751" height="357" alt="image" src="https://github.com/user-attachments/assets/3a174ecb-a949-4fdb-8efa-56c027efa4c1" />
+</br>
+</br>
+</br>
+
+---
 
 ### 프로세스 (4/6) : 설계의 핵심요소 살펴보기
 
