--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -90,7 +90,45 @@
 ---
 
 ### 프로세스 (4/6) : 설계의 핵심요소 살펴보기
+</br>
+
+### < 설계의 기본 요소 >
+<img width="815" height="272" alt="image" src="https://github.com/user-attachments/assets/499aaf4b-5c11-4396-9e7a-4747e089888e" />
+</br>
+</br>
+</br>
+
+### < 구체적인 설계 방법 >
+<img width="640" height="292" alt="image" src="https://github.com/user-attachments/assets/efc9b4b7-9423-4422-860a-5c7dcf819831" />
+</br>
+</br>
+</br>
+
+### < 상태 다이어그램을 이용한 네비게이션 설계 >
+<img width="774" height="188" alt="image" src="https://github.com/user-attachments/assets/14ebdb84-d289-4cfd-93af-7fd3cd6fad2b" />
+</br>
+</br>
+</br>
+
+### < 화면 레이아웃 - 장바구니 >
+<img width="775" height="401" alt="image" src="https://github.com/user-attachments/assets/17b37a85-fc0b-4ef7-9d43-3ee5db623dcd" />
+</br>
+</br>
+</br>
+
+### < 화면 레이아웃 - 주문화면 >
+<img width="630" height="586" alt="image" src="https://github.com/user-attachments/assets/26302f9e-105a-4da2-8e0d-9620920f71ed" />
+</br>
+</br>
+</br>
 
 ### 프로세스 (5/6) : 쇼핑몰 주문관리 구축하기 #2
+</br>
+
+### < Primary Key 종류 >
+- 1. 자동순번 : 데이터베이스에서 자동으로 증가하는 순번으로, 주로 숫자 형식
+  2. 단일키 : 하나의 속성을 기본 키로 사용
+  3. 복합키 : 두 개 이상의 속성 또는 열을 결합하여 기본 키로 사용
+
 
 ### 프로세스 (6/6) : 쇼핑몰 주문관리 구축하기 #3
