--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -126,9 +126,9 @@
 </br>
 
 ### < Primary Key 종류 >
-1. 자동순번 : 데이터베이스에서 자동으로 증가하는 순번으로, 주로 숫자 형식
-2. 단일키 : 하나의 속성을 기본 키로 사용
-3. 복합키 : 두 개 이상의 속성 또는 열을 결합하여 기본 키로 사용
+- 1. 자동순번 : 데이터베이스에서 자동으로 증가하는 순번으로, 주로 숫자 형식
+  2. 단일키 : 하나의 속성을 기본 키로 사용
+  3. 복합키 : 두 개 이상의 속성 또는 열을 결합하여 기본 키로 사용
 
 
 ### 프로세스 (6/6) : 쇼핑몰 주문관리 구축하기 #3
