--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -131,4 +131,32 @@
   3. 복합키 : 두 개 이상의 속성 또는 열을 결합하여 기본 키로 사용
 
 
+```erd
+erDiagram
+    Customers ||--o{ Orders : places
+    Customers ||--o{ ShippingAddress : has
+    Customers ||--o{ Cart : owns
+
+    Customers {
+        int id PK
+    }
+
+    Orders {
+        int id PK
+        int customerId FK
+    }
+
+    ShippingAddress {
+        int id PK
+        int customerId FK
+    }
+
+    Cart {
+        int id PK
+        int customerId FK
+    }
+
+```
+
+
 ### 프로세스 (6/6) : 쇼핑몰 주문관리 구축하기 #3
