--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -131,7 +131,7 @@
   3. 복합키 : 두 개 이상의 속성 또는 열을 결합하여 기본 키로 사용
 
 
-```erd
+```mermaid
 erDiagram
     Customers ||--o{ Orders : places
     Customers ||--o{ ShippingAddress : has
